fix(Styles): increase grid spacing in the work-experience component for small screens

--- a/src/sass/components/_work-experience.scss
+++ b/src/sass/components/_work-experience.scss
@@ -15,7 +15,7 @@
 
   @media (width <= 640px) {
     grid-template-columns: none;
-    gap: 8rem;
+    gap: 12.5rem;
   }
 
   & a {
